--- a/pages/2017.md
+++ b/pages/2017.md
@@ -18,10 +18,10 @@ description: ""
 | <br><br>**Singapore Space Challenge**  | **Team (Unmanned Systems Category)   <br>1st - Grand Prize Winners** <br>Daryl Tai (6F)  <br>Tan Yi Shiuan (6K)  <br>Liu Yincheng (6K)  <br>Zhou Ziqi (6M)  |
 | <br><br>**Singapore National Olympiad in Informatics<br>** (organised by NUS)  | **Silver Award**   <br>Neoh Tzeh Yuan (5L)   <br>Si Chenglei (4H)  <br><br>**Bronze Award**   <br>Chan Kah Leong (5M)   <br>Fu Shun Long Winston (5J)  <br>Zhang Chunjie (4B)  |
 | <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>**Anglo-Chinese Junior College International Biomedical Challenge**  | **Gold Medals (Upper Secondary Category)**<br>Jiang Xinyi (4E)  <br>Sun Baizhen (4E)  <br>Zheng Meijia (4E)  <br>Choi Tong En (4E)  <br>Maximus Bey Shi Ang (4F)  <br><br>**Silver Medals (Upper Secondary Category)**<br>Jerlyn Chua (4A)  <br>Gloria Yuan Zi Yi (4B)  <br>Lee Hwee Liang, Ian (4D)  <br>Foo Melson (4E)  <br>Monica Rae (4E)  <br>Kelly Soh Yan Xuan (4E)  <br>Sammi Ong Xue Ying (4E)  <br><br>**Bronze Medals (Upper Secondary Category)**<br>Lau Ying Ru (4D)  <br>Chong Ka Shing (4E)  <br><br>**Honourable Mention Awards (Upper Secondary Category)**<br>Yeoh An Ni (4B)  <br>Lim Jun Hui, Alan (4E)  <br><br>**Merit Awards (Upper Secondary Category)**<br>Yong Jie Ning (4E)  <br>Lim Swee Ken (4E)  <br>Yong Chuen Shin (4E)  <br>Josiah Lim Wei Shuen (4H)  <br><br>**Gold Medals (Junior College Category)**<br>Wang Shixian (6A)  <br>Kong Qiu Yii (6D)  <br>Zhang Yingjia (6D)  <br><br>**Silver Medal (Junior College Category)**<br>Xie Jiaying (6D)  <br><br>**Bronze Medal (Junior College Category)**<br>Gao Zhihao (6C)  <br><br>**Honourable Mention Award (Junior College Category)**<br>Chua Yu Ying (6C)  <br><br>**Merit Award (Junior College Category)**<br>Debbie Sieu Hoon (6C) <br><br>**3rd Runner Up (Team, Junior College Category)**<br>Wang Shixian (6A)  <br>Ng Xin Ni (6D)  <br>Xie Jiaying (6D)  <br>Zhang Yingjia (6D)  |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+| <br><br>**Lee Kong Chian School of Medicine Anatomy Challenge**  | **1st Placing (Individual Category)**<br>Zhang Yingjia (6D)  <br><br>**3rd Placing (Group Category)**<br>Zhang Yingjia (6D)  <br>Xie Jiaying (6D)  <br>Kong Qiu Yii (6D)  <br>See Too Shi En Tiffany (6D)  |
+| **Young Defence Scientists Programme Science & Technology Camp Competition**  | **Most Innovative Team Award (Team, IP2 Category)**  <br>Lim Jia Qing (3A)  <br>Luo Rui, Russel (3A)  <br>Ong Xue Ren (3A)  <br>Ting Kwok Ian (3B)  |
+| <br><br>**NUS Geography Challenge**  | **Gold Award (Individual)** <br>Sun Baizhen (4E)  <br>Yeo Wen Rong (4E)   <br><br>**Bronze Award (Individual)** <br>Nicholas Woong (4E)  |
+| <br><br><br>**Challenge for the Urban Built Environment 2016**  | **1st Place (Team)**<br>Lau Su Jun (5H)  <br>Ng Huei Ying (5H)  <br>Chloe Lau Jia Yee (5H)  <br>Heng Jie Min (5H)  <br>Chng Jing Yuan (5H)  <br>Chiang Hui Lin (5P)  <br>Neo Shu Yi (5P)  <br>Jocelyn Wong Min Yi (5R)  <br>Hong Zhengyi (5R)  |
 |   |   |
 |   |   |
 |   |   |
