--- a/pages/2017.md
+++ b/pages/2017.md
@@ -22,7 +22,7 @@ description: ""
 | **Young Defence Scientists Programme Science & Technology Camp Competition**  | **Most Innovative Team Award (Team, IP2 Category)**  <br>Lim Jia Qing (3A)  <br>Luo Rui, Russel (3A)  <br>Ong Xue Ren (3A)  <br>Ting Kwok Ian (3B)  |
 | <br><br>**NUS Geography Challenge**  | **Gold Award (Individual)** <br>Sun Baizhen (4E)  <br>Yeo Wen Rong (4E)   <br><br>**Bronze Award (Individual)** <br>Nicholas Woong (4E)  |
 | <br><br><br>**Challenge for the Urban Built Environment 2016**  | **1st Place (Team)**<br>Lau Su Jun (5H)  <br>Ng Huei Ying (5H)  <br>Chloe Lau Jia Yee (5H)  <br>Heng Jie Min (5H)  <br>Chng Jing Yuan (5H)  <br>Chiang Hui Lin (5P)  <br>Neo Shu Yi (5P)  <br>Jocelyn Wong Min Yi (5R)  <br>Hong Zhengyi (5R)  |
-|   |   |
+| <br><br><br>**Singapore Model Cabinet**  | **Honourable Mention**<br>Chu Ting Fang (5M)  <br>Foo Wen Hao (5M)  <br>Voon Jung (6N)  <br>Wang Weiyu (6S)  <br><br>**Verbal Commendation**<br>Goh Tong Tong (5R)  |
 |   |   |
 |   |   |
 |   |   |
