--- a/pages/2017.md
+++ b/pages/2017.md
@@ -23,13 +23,13 @@ description: ""
 | <br><br>**NUS Geography Challenge**  | **Gold Award (Individual)** <br>Sun Baizhen (4E)  <br>Yeo Wen Rong (4E)   <br><br>**Bronze Award (Individual)** <br>Nicholas Woong (4E)  |
 | <br><br><br>**Challenge for the Urban Built Environment 2016**  | **1st Place (Team)**<br>Lau Su Jun (5H)  <br>Ng Huei Ying (5H)  <br>Chloe Lau Jia Yee (5H)  <br>Heng Jie Min (5H)  <br>Chng Jing Yuan (5H)  <br>Chiang Hui Lin (5P)  <br>Neo Shu Yi (5P)  <br>Jocelyn Wong Min Yi (5R)  <br>Hong Zhengyi (5R)  |
 | <br><br><br>**Singapore Model Cabinet**  | **Honourable Mention**<br>Chu Ting Fang (5M)  <br>Foo Wen Hao (5M)  <br>Voon Jung (6N)  <br>Wang Weiyu (6S)  <br><br>**Verbal Commendation**<br>Goh Tong Tong (5R)  |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+| <br><br>**Nanyang Technology University of Singapore Model United Nations**  |  **Best Position Paper**<br>Goh Tong Tong (5R)  <br><br>**Verbal Commendation**<br>Foo Wen Hao (5M)  <br><br>**Best Delegate**<br>Lim Yan Wei Darren (5R) |
+| **Tan Kah Kee Young Inventors' Award Competition**  | **Merit Award** <br>Chen Jiarui (4C)   <br>Fan Kerong (4E)  |
+| **Singapore International 3D Printing Competition**  | **1st Prize (Singapore Schools Student Category)**<br>Chen Jiarui (4C)  <br>Fan Kerong (4E)  |
+| **The MOE-Straits Times National Current Affairs Quiz**  | **1st Runner-Up (Team)**<br>Lu Yi Xin (5R)  <br>Ryan How (6J)  <br>Wang Weiyu (6S)  |
+|**Dunman High School Public Speaking Competition**   | **2nd Runner-Up (Individual)**<br>Christine Ow (6I)  |
+| <br><br>**校园超级阅读明星比赛**  | **低年级手绘漫画校内优秀奖**<br>林静文 (3B)  <br><br>**低年级手绘漫画银奖**<br>佘思霖 (3J)  |
+| **2017全国中学双语辩论比赛**  | **最佳辩手**<br>邓佳瑄 (3D)  <br>刘清音 (4H)  |
 |   |   |
 |   |   |
 |   |   |
