--- a/pages/2017.md
+++ b/pages/2017.md
@@ -30,24 +30,9 @@ description: ""
 |**Dunman High School Public Speaking Competition**   | **2nd Runner-Up (Individual)**<br>Christine Ow (6I)  |
 | <br><br>**校园超级阅读明星比赛**  | **低年级手绘漫画校内优秀奖**<br>林静文 (3B)  <br><br>**低年级手绘漫画银奖**<br>佘思霖 (3J)  |
 | **2017全国中学双语辩论比赛**  | **最佳辩手**<br>邓佳瑄 (3D)  <br>刘清音 (4H)  |
+| <br><br>**2017 第五届南华双文化论坛**  | **第三名**<br>张子芊 (3B)  <br>洪君玲 (3C)  <br>余沁颖 (3C)  <br>李诗萌 (3C)  <br>徐一 (3C)  |
+| **“创意无限”全国儿童故事创作大赛（推广华文理事会、新加坡华文教研中心）**  |**二等奖（中一、中二组)**<br>李天傲 (3C)  <br><br>**三等奖（中三至中五组）**<br>徐新榕 (4A)  |
+| <br><br><br><br>**2017年华中中国通识论坛**  | **中国通识常识竞赛季军**<br>陈心怡 (6M)  <br>刘嘉瑄 (6B)  <br>陈欣蔚 (6R)  <br><br>**中国通识视频竞赛季军**<br>林泽辰 (5N)  <br>田行健 (5F)  <br>金文祺 (5J)  <br>赖馨怡 (5P)  |
+| <br><br>**2017第四届全国华文大比拼**  | **团体第四名**<br><br>**个人优秀奖**<br>张子芊 (3B)  <br>刘清音 (4H)  <br>毛禹迪 (4B)  <br>白宁萱 (4B)  |
 |   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+
