--- a/pages/2017.md
+++ b/pages/2017.md
@@ -36,3 +36,35 @@ description: ""
 | <br><br>**2017第四届全国华文大比拼**  | **团体第四名**<br><br>**个人优秀奖**<br>张子芊 (3B)  <br>刘清音 (4H)  <br>毛禹迪 (4B)  <br>白宁萱 (4B)  |
 |   |   |
 
+#### Co-Curricular Activities
+
+|   |   |
+|:-:|---|
+| <br><br><br>**Girl Guides**  | **2016 President's Guide Award**             <br>Yeoh Hui Qing (4C 2016)   <br><br>_The President's Guide Award is the highest level of achievement attainable by a Guide below the age of 18. It is given in recognition of the Guides' love for Guiding, her commitment towards the Guiding Movement, and her efforts in upholding Guiding values and skills to respectable standards. This is the second consecutive year that a RVHS Guide has attained this prestigious award._  |
+| **National Wushu Championships**  | 2nd (A Division Boys)  <br>4th (A Division Girls)  <br>2nd (C Division Girls)  |
+|   | ♦  **NATIONAL SCHOOL GAMES**   ♦  |
+| **National Inter-Schools Softball Championships**  | 4th (A Division Boys)  <br>3rd (A Division Girls)  <br>3rd (B Division Girls)  |
+|  **National Inter-Schools Cross Country Championships** | <br>4th (A Division Girls)  |
+| **West Zone Badminton Championships**  | 3rd (B Division Boys)  <br>2nd (B Division Girls)    <br>2nd (C Division Boys)  <br>2nd (C Division Girls)  |
+| **West Zone Table Tennis Championships**  | 3rd (B Division Boys)  <br>4th (B Division Girls)    <br>4th (C Division Boys)  <br>3rd (C Division Girls)  |
+| **ActiveSG-Basketball Association of Singapore Basketball Development League**  | <br>4th (B Division Girls)  |
+| **West Zone Basketball Championships**  | **Fair Play Award**<br>B Division Girls  |
+| **National Inter-Schools Floorball Championships**  | <br>1st (A Division Girls)  |
+|   | ♦  **SINGAPORE YOUTH FESTIVAL ARTS PRESENTATION**  ♦  |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
