--- a/pages/2017.md
+++ b/pages/2017.md
@@ -51,14 +51,14 @@ description: ""
 | **West Zone Basketball Championships**  | **Fair Play Award**<br>B Division Girls  |
 | **National Inter-Schools Floorball Championships**  | <br>1st (A Division Girls)  |
 |   | ♦  **SINGAPORE YOUTH FESTIVAL ARTS PRESENTATION**  ♦  |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+| **Chinese Orchestra**  <br>Secondary School  <br>Junior College  |  <br>Distinction  <br>Distinction  |
+| **Choir**  <br>Secondary School  | <br>Distinction  |
+| **Concert Band**<br>Secondary School  <br>Junior College  <br>Percussion Ensemble  |<br> Distinction  <br>Accomplishment   <br>Distinction  |
+| **Dance**  <br>International, Secondary School  <br>Chinese, Secondary School  <br>Chinese, Junior College  | <br>Distinction  <br><br>Distinction  <br><br>Distinction  |
+| **Guitar Ensemble** (Junior College)  | Accomplishment  |
+| **String Ensemble**  <br>Secondary School  <br>Junior College  | <br>Accomplishment  <br>Accomplishment  |
+| **Chinese Literary, Drama and Debate Society** (Secondary School)  | <br><br>Accomplishment  |
+| **English Literary, Drama and Debate Society** (Secondary School)  | <br><br>Accomplishment  |
 |   |   |
 |   |   |
 |   |   |
