--- a/pages/2017.md
+++ b/pages/2017.md
@@ -59,12 +59,11 @@ description: ""
 | **String Ensemble**  <br>Secondary School  <br>Junior College  | <br>Accomplishment  <br>Accomplishment  |
 | **Chinese Literary, Drama and Debate Society** (Secondary School)  | <br><br>Accomplishment  |
 | **English Literary, Drama and Debate Society** (Secondary School)  | <br><br>Accomplishment  |
+|   |  ♦  **CLUBS AND SOCIETIES**  ♦ |
+| **第九届全国青少年书法大赛**  | **亚军**   : 毛瑞杰（2J）   <br>**优秀奖**: 陆楷俊（3D）  <br>**优秀奖**: 陆渼锜（3B）  |
+| <br><br><br>**2017年油池全国毛笔与硬笔书法公开赛**  | **毛笔书法—冠军**   <br>陆楷俊（3D）   <br><br>**硬笔书法—优秀奖**   <br>陆楷俊（3D）   <br><br>**毛笔书法--亚军**   <br>毛瑞杰（2J）   <br><br>**毛笔书法—优秀奖**   <br>陆渼锜（3B）  |
+| <br><br>**第九届精英杯亚洲中学华语辩论公开赛**   <br>这辩论公开赛的宗旨是为了提高中学生对辩论的认识，并促进亚洲中学生辩手之间的交流  | **亚军**  <br>袁雨桐 Yuan Yutong (6J)  <br>唐印雨函 Tang Yinyuhan (5C)  <br>林映慧 Lim Ying Hui (5M)  <br>黄丽晶 Huang Lijing (5R)  <br>王诗贤 Wang Shixian (5A)  <br>张雅钦 Zhang Yaqin (4A)  <br>王柳容 Wang Liurong (3C)  <br><br>**全场最佳辩手** <br>袁雨桐 Yuan Yutong (6J)  |
 |   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+
+#### Outstanding RVians
+
