--- a/pages/2016.md
+++ b/pages/2016.md
@@ -3,6 +3,37 @@ title: "2016"
 permalink: /2016Achievements/
 description: ""
 ---
+## 2016 Achievements
 
-## 2016 Achievements 
+#### School and Academic
 
+|   |   |
+|:-:|---|
+| <br>**‘Water is Life’ International <br>Conference 2016** held in<br> Amsterdam, Netherlands  | **Gold medal** (‘Communities and Education’ category)   <br>Andrea Tan Li Yao (Year 5)   <br>Ng Ying Yi Jewel (Year 5)   <br>Linda Lin @ Win Lei New (Year 5)   <br>Chan Tze Cheng Tricia (Year 5)  |
+| <br><br><br>**6th Shanghai International Youth Science and Technology Expo 2016**  <br><br>**"Science & Technology Stars of Tomorrow" Invitational Tournament**<br><br>held in Shanghai, China  | _Five students and two teachers from our school were invited by the organising committee of the 6th SIYST Expo to participate in the exhibition and competition._  <br><br>**Organising Committee Award** – Use of Active Learning with Integration of ICT in Teaching and Learning of Science (Physics): Miss Kok Hui Ching   <br><br>**1st placing and “The Most Popular Project” Prize**:  <br>Wang Shixian (Year 5)   <br>Zhang Yixing (Year 5)   <br><br>**2nd placing**:   <br>Nobel Ang (Year 5)   <br><br>**3rd placing**:   <br>Liew Kai Yi (Year 3)   <br>Nicholas Goh Jun Xian (Year 3)  |
+| <br><br><br><br><br><br><br><br><br><br><br>**Singapore Science and Engineering Fair**  | **Gold Award** Chow Kit Mun (Year 5)   <br>_Kit Mun has been selected by MOE to represent Singapore in Intel TM International Science & Engineering Fair at Phoenix, Arizona, USA in May 2016_   <br><br>**Silver & Special Awards**  (The Chapter of Clinician Scientists Award):   <br>Chong Shu Chen (Year 6)   <br>Koo Fang Ru (Year 6)   <br>Kendy Chan Gui Fang (Year 6)   <br><br>**Silver Awards**<br> Individual: Tan Chern Heng (Year 6)   <br>Team: Chen Yijia, Yuan Yutong (Year 6)   <br><br>**Bronze Awards (Individual)**   <br>Tan Yi Shiuan (Year 5)   <br>Christopher Goh Zhen Fung (Year 6)   <br><br>**Merit Awards (Team)**   <br>(i) Teo Chong Boon, Wu Duoduo (Year 6) <br>(ii) Li Qin Hui, Lee Derick, Yu Siyue (Year 6)   <br>(iii) Wai Sin Yee, Ng Kwok Wing, Zhou Ziqi (Year 5)   <br><br>**Special Awards (School-based Projects) & Special Award (Best Poster)**   <br>Goh Cheng Wei Benjamin (Year 5)   <br>Ji Yuxuan (Year 5)   <br><br>**Special Awards (School-based Projects)**   <br>Tho Jia Yi (Year 5)   <br>Sie Kim Ee Chloe (Year 5)  |
+| <br><br>**International Invitational Chinese Debate Competition**  | **Champion (Senior High Team)**   <br>Yuan Yutong (Year 6), Chen Beiqi (Year 6), Lim Ying Hui (Year 5), Huang Li Jing (Year 5), Jia Shengzhi (Year 5), and Wang Shixian (Year 5)  <br><br>**3rd Placing (Junior High Team)**<br> Chai Li Xian (Year 4), Xu Jiani (Year 4), Li Yuqian (Year 4), Xie Yu Xuan (Year 4), Chen Jiarui (Year 3), and Luo Tianhong (Year 3)  |
+|  **Singapore Biology Olympiad** | **Merit Award** <br>Koh Wern Xing (Year 6)  |
+| **Singapore Chemistry Olympiad**  | **Bronze Medal** <br>Wang Kaiwen (Year 6)  |
+| **Singapore Physics Olympiad**  | **Bronze Medal**<br>Li Yezhou (Year 6)  |
+| <br>**Singapore Young Physicists' Tournament**  | **Team (Secondary School)**   <br>Commendation Award   <br><br>**Team (Junior College)**   <br>Both teams received Commendation Awards  |
+| **Singapore 19th National Olympiad in Informatics** (organised by NUS)  | **Bronze Award**   <br>Li Yezhou (Year 6)  |
+| <br><br>**American Mathematics Competitions**  | **AMC12 - Certificate of Distinction & American Invitational Mathematics Examination (Top 5%)**  <br>Ji Yuxuan (Year 5)   <br>Lau De Xing (Year 6)   <br>Ju Yuting (Year 6)  |
+| <br><br><br>**NUS Geography Challenge 2016**  | **Silver Medal** <br>Quek Yi Yuan Sharlene (Year 4)   <br><br>**Bronze Medal** <br>Ng Li Xin (Year 4)   <br>Tan Wan Yun (Year 4)  |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
