--- a/pages/2016.md
+++ b/pages/2016.md
@@ -20,14 +20,14 @@ description: ""
 | **Singapore 19th National Olympiad in Informatics** (organised by NUS)  | **Bronze Award**   <br>Li Yezhou (Year 6)  |
 | <br><br>**American Mathematics Competitions**  | **AMC12 - Certificate of Distinction & American Invitational Mathematics Examination (Top 5%)**  <br>Ji Yuxuan (Year 5)   <br>Lau De Xing (Year 6)   <br>Ju Yuting (Year 6)  |
 | <br><br><br>**NUS Geography Challenge 2016**  | **Silver Medal** <br>Quek Yi Yuan Sharlene (Year 4)   <br><br>**Bronze Medal** <br>Ng Li Xin (Year 4)   <br>Tan Wan Yun (Year 4)  |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+| <br><br><br>**Bee and Bowl History Championships**  | **History Bowl Qualifying Team for Regional Championship in Phuket (Team)**   <br>Deng Jia Xuan (Year 2), Chong Pin Shin (Year 2), Vernice Chua (Year 3), and Lu Yixin (Year 4)   <br><br>**Overall 2nd (Middle School Bee)** <br>Jonathan Lim (Year 2)   <br><br>**Overall 3rd (Junior Varsity Bee)** <br>Lu Yixin (Year 4)  |
+| **Green Wave Environmental Care Competition** (Secondary School Category)  | **2nd Placing (Team)** : Tan Jia Yuan Janet (Year 5), Zhu Ke Ying (Year 5), Chua Micaiah (Year 5), Lau Su Jun (Year 5), Reen Ho Wan Li (Year 5), and Chen Xinyi (Year 5)  |
+| <br><br><br>**Anglo-Chinese Junior College International Biomedical Quiz**  | **Individual (Upper Secondary)** <br>1 Gold, 2 Silver and 3 Bronze Medals   <br><br>**Individual (Junior College)** <br>2 Bronze Medals   <br><br>**Team (Junior College)**   <br>3rd Runner-up  |
+| **Anglo-Chinese Junior College International C. B. Paul Science Quiz**  | **Individual (Secondary)** <br>1 Gold, 1 Silver and 2 Bronze Medals  |
+| **MOE-ACJC Intercollegiate Debating Competition**  | 2nd (Team)  |
+| **Singapore Space Challenge**  | **Team (Space & Medical Science Category)** <br>1st Runner-up  |
+| **National iTrail Challenge**  | **3rd (Team)** |
+| <br><br><br>**Nationale–Nederlanden (NN)-Junior Achievement Social Innovation Relay**  | **Champions (National Finals)**:   <br>Li Yezhou (Year 6)   <br>Zhou Ziqi (Year 5)   <br>Zhou Zirui (Year 5)   <br><br>**Second Runner-Up (Global Finals)**:   <br>Li Yezhou (Year 6)   <br>Zhou Ziqi (Year 5)   <br>Zhou Zirui (Year 5)  |
 |   |   |
 |   |   |
 |   |   |
