--- a/pages/2016.md
+++ b/pages/2016.md
@@ -47,13 +47,13 @@ description: ""
 | **National Inter-Schools Softball Championships**  | 1st (A Division Girls)  |
 | <br><br>**National Inter-Schools Wushu Championships**  | Overall 2nd (A Division Boys)   <br>Overall 3rd (A Division Girls)   <br>Overall 4th (C Division Girls)   <br><br>In the individual categories, our students clinched    <br>8 Golds, 6 Silvers, 11 Bronzes and 14 4th Placings  |
 | **National Inter-Schools Badminton Championships**  | 2nd (A Division Boys) <br>2nd (A Division Girls)  <br>4th (B Division Girls)  |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
-|   |   |
+| **National Inter-Schools Table Tennis Championships**  | <br>4th (A Division Boys)  |
+| **National Inter-Schools Netball Championships**  | 4th (A Division Girls)  |
+| **West Zone Badminton Championships**  | 1st (B Division Boys)   <br>1st (B Division Girls)   <br>2nd (C Division Girls)   <br>3rd (C Divisions Boys)  |
+| **West Zone Netball Championships**  | 3rd (B Division Girls)  |
+| <br>**West Zone Table Tennis Championships**  |  3rd (B Division Boys)   <br>3rd (B Division Girls)   <br>3rd (C Division Girls)   <br>4th (C Division Boys) |
+| **West Area Bowling Challenge**  | 2nd (Inter-Unit and Inter-Team challenge):  <br>Lim Shiu Xin Gregg (Year 4), 5th (individual category)   <br>Tang Zong Hao (Year 4), 3rd (individual category)   <br>Sammi Ong Xue Ying (Year 3) Luo Rui, Russell (Year 2) Tan Liang Heuk (Year 1)  |
+|   |  ♦  **SINGAPORE YOUTH FESTIVAL ARTS PRESENTATION**  ♦ |
 |   |   |
 |   |   |
 |   |   |
