--- a/pages/2016.md
+++ b/pages/2016.md
@@ -54,6 +54,37 @@ description: ""
 | <br>**West Zone Table Tennis Championships**  |  3rd (B Division Boys)   <br>3rd (B Division Girls)   <br>3rd (C Division Girls)   <br>4th (C Division Boys) |
 | **West Area Bowling Challenge**  | 2nd (Inter-Unit and Inter-Team challenge):  <br>Lim Shiu Xin Gregg (Year 4), 5th (individual category)   <br>Tang Zong Hao (Year 4), 3rd (individual category)   <br>Sammi Ong Xue Ying (Year 3) Luo Rui, Russell (Year 2) Tan Liang Heuk (Year 1)  |
 |   |  ♦  **SINGAPORE YOUTH FESTIVAL ARTS PRESENTATION**  ♦ |
+| **Drama (Chinese)**  | Accomplishment Award  |
+| **Drama (English)**  | Distinction Award  |
+|   |  ♦  **CLUBS AND SOCIETIES**  ♦ |
+| **National Chinese Calligraphy Competition**  | **1st Prize**   <br>Lek Kai Jun (Year 2)  |
+| **8th National Youth Chinese Calligraphy Competition**  | **1st Prize** (Secondary Schools): Mao Ruijie (Year 1)   <br>**Merit Prize** (Secondary Schools): Lek Kai Jun (Year 2)   <br>**Merit Prize** (Junior Colleges): Ngoh Jia Hui (Year 6)  |
+| **Yew Tee National Chinese Calligraphy Competition**  | **1st Prize** (Secondary Schools): Mao Ruijie (Year 1)   <br>**2nd Prize** (Secondary Schools): Loke Mei Qi Jessica (Year 2)   <br>**2nd Prize** (Junior Colleges): Wang Kaiwen (Year 6)   <br>**Merit Prize** (Secondary Schools): Lek Kai Jun (Year 2)  |
+| **新加坡全国中学生华文文艺营写作比赛**  | 冠军: 卓展廷 (Year 4)  |
+| **第六届全国毛笔与硬笔书法大赛**  | 冠军: 陆楷俊 (Year 2)  |
+| **"翰墨笔香迎国庆"中小学生书法比赛**  | 冠军: 陆楷俊 (Year 2)  |
+| **"墨墨传情"全国书法大赛**  | 亚军: 毛瑞杰 (Year 1)  |
+|   |   |
+
+#### Outstanding RVians
+
+|   |   |
+|:-:|---|
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
+|   |   |
 |   |   |
 |   |   |
 |   |   |
