--- a/_ours-stories/RV60.md
+++ b/_ours-stories/RV60.md
@@ -3,3 +3,12 @@ title: RV60
 permalink: /ours-stories/rv60/
 description: ""
 ---
+## RV60
+
+<img src="/images/RV60-logo.png" style="width:30%" align=left>
+
+River Valley High School (RVHS) celebrated her diamond jubilee (60 th anniversary) and the 10 th   anniversary of her Integrated Programme on 16 January 2016. Mr Ng Chee Meng, Acting Minister for Education (Schools) & Senior Minister of State, Ministry of Transport, graced the occasion as Guest-of-Honour. Mr Ng unveiled the RV Spirit sculpture, and officially opened the school’s Pedagogical Excellence Academy, which brings together the pursuit of excellence in teaching and learning methodologies by the various departments in the school, and provides a platform for the sharing and exchange of best practices with teachers across Singapore
+
+The highlight of the celebrations was a 1500-strong student mass display, depicting the RV Heartbeat and RV Story. More than 1,200 students and staff, from past and present, commemorated the milestone in the school’s history with a gala dinner following the performance. Alumni from the pioneers of the 1956 inaugural intake to the current cohort of 2016 were represented at the dinner to celebrate the RV spirit and the school’s rich history.
+
+<iframe width="388" height="215" align="right"src="https://www.youtube.com/embed/KpUM70LPkgc" title="Snippets and Memories of RV60" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
