--- a/_ours-stories/RV60.md
+++ b/_ours-stories/RV60.md
@@ -23,3 +23,10 @@ In her address at the gala dinner, Mrs Teo Khin Hiang, Principal of River Valley
 * [立化中学举办60年校庆](http://www.channel8news.sg/news8/latestnews/20160116-sg-river-valley/2432518.html?cid=ch8news-fb) (Mediacorp News 8, 16/1) **SITE CANT BE REACHED**
 * [River Valley High celebrates diamond jubilee](http://www.channelnewsasia.com/mobile/latestnews/river-valley-high/2432680.html) (CNA, 16/1)
 
+<p><a href="https://www.facebook.com/RV60celebrations/">
+<img style="width:30%" align="left" src="/images/RV60-logo.png">
+</a></p>
+<br clear="left">
+
+[Visit our RV60 Facebook Page!](https://www.facebook.com/RV60celebrations/)
+
