--- a/_ours-stories/RV60.md
+++ b/_ours-stories/RV60.md
@@ -5,28 +5,31 @@ description: ""
 ---
 ## RV60
 
-<img src="/images/RV60-logo.png" style="width:30%" align=left>
+<img align="left" style="width:30%" src="/images/RV60-logo.png">
 
-River Valley High School (RVHS) celebrated her diamond jubilee (60 th anniversary) and the 10 th   anniversary of her Integrated Programme on 16 January 2016. Mr Ng Chee Meng, Acting Minister for Education (Schools) & Senior Minister of State, Ministry of Transport, graced the occasion as Guest-of-Honour. Mr Ng unveiled the RV Spirit sculpture, and officially opened the school’s Pedagogical Excellence Academy, which brings together the pursuit of excellence in teaching and learning methodologies by the various departments in the school, and provides a platform for the sharing and exchange of best practices with teachers across Singapore
+River Valley High School (RVHS) celebrated her diamond jubilee (60&nbsp;th&nbsp;anniversary) and the 10&nbsp;th&nbsp;&nbsp;&nbsp;anniversary of her Integrated Programme on 16 January 2016. Mr Ng Chee Meng, Acting Minister for Education (Schools) &amp; Senior Minister of State, Ministry of Transport, graced the occasion as Guest-of-Honour. Mr Ng unveiled the RV Spirit sculpture, and officially opened the school’s Pedagogical Excellence Academy, which brings together the pursuit of excellence in teaching and learning methodologies by the various departments in the school, and provides a platform for the sharing and exchange of best practices with teachers across Singapore
 
 The highlight of the celebrations was a 1500-strong student mass display, depicting the RV Heartbeat and RV Story. More than 1,200 students and staff, from past and present, commemorated the milestone in the school’s history with a gala dinner following the performance. Alumni from the pioneers of the 1956 inaugural intake to the current cohort of 2016 were represented at the dinner to celebrate the RV spirit and the school’s rich history.
 
-<iframe width="388" height="215" align="right" src="https://www.youtube.com/embed/KpUM70LPkgc" title="Snippets and Memories of RV60" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="Snippets and Memories of RV60" src="https://www.youtube.com/embed/KpUM70LPkgc" align="right" height="215" width="388"></iframe>
 
 In her address at the gala dinner, Mrs Teo Khin Hiang, Principal of River Valley High School, focused on the significance of this year’s milestone celebrations. “Our school continues to enhance and implement new and innovative programmes to nurture in students bicultural acumen and moral integrity, and empower students to be thinkers, leaders and achievers.” Notably, since embarking on the Integrated Programme in 2006, the school has established various academies to nurture students’ interests, passions and pursuit of various disciplines. These academies include the Science Leaders Academy, The Eco-Sustainability Leadership Academy, Humanities and Social Sciences Academy, the Bicultural Academy and Mathematics Leaders Academy. These academies are the outcome of collaborations with various partners, including Ministries, Institutions of Higher Learning, the Economic Development Board, A\*STAR and multinational corporations.
 
-<img src="/images/rv60.jpg" style="width:85%">
+<img style="width:85%" src="/images/rv60.jpg">
 
 #### RV60 in the news
 
-* [创校60周年-立化中学卓越教学学研中心揭幕](https://rivervalleyhigh.moe.edu.sg/qql/slot/u724/Events/RV60/RV60-LHZB-170116.jpg) (LHZB, 17/1)
-* [立化中学举办60年校庆](http://www.channel8news.sg/news8/latestnews/20160116-sg-river-valley/2432518.html?cid=ch8news-fb) (Mediacorp News 8, 16/1) **SITE CANT BE REACHED**
-* [River Valley High celebrates diamond jubilee](http://www.channelnewsasia.com/mobile/latestnews/river-valley-high/2432680.html) (CNA, 16/1)
+* [创校60周年-立化中学卓越教学学研中心揭幕](https://rivervalleyhigh.moe.edu.sg/qql/slot/u724/Events/RV60/RV60-LHZB-170116.jpg)&nbsp;(LHZB, 17/1)
+* [立化中学举办60年校庆](http://www.channel8news.sg/news8/latestnews/20160116-sg-river-valley/2432518.html?cid=ch8news-fb)&nbsp;(Mediacorp News 8, 16/1) **SITE CANT BE REACHED**
+* [River Valley High celebrates diamond jubilee](http://www.channelnewsasia.com/mobile/latestnews/river-valley-high/2432680.html)&nbsp;(CNA, 16/1)
 
 <p><a href="https://www.facebook.com/RV60celebrations/">
-<img style="width:30%" align="left" src="/images/RV60-logo.png">
+<img src="/images/RV60-logo.png" align="left" style="width:30%">
 </a></p>
 <br clear="left">
 
 [Visit our RV60 Facebook Page!](https://www.facebook.com/RV60celebrations/)
 
+**RV60 Photographs**
+
+<iframe allowfullscreen="true" height="450" width="800" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vTwTP_NR4dSJDqt8HT934ZX-DeIsVbA2H-Zl3mBD9eQ0wusgSE1dFMQviz8R4zaXvgQLYepQb4Abvu_/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
