--- a/_ours-stories/立化情.md
+++ b/_ours-stories/立化情.md
@@ -3,3 +3,15 @@ title: 立化情
 permalink: /ours-stories/ourstories-2ndnavi/
 description: ""
 ---
+<img src="/images/aboutlihuaqing.png" style="width:30%" align=left>
+
+<iframe width="800" height="372" src="https://www.youtube.com/embed/NEUpPG6rIcc" title="立化情MV" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+Composed in 2013, **立化情** is a song written by Neo Ling Wei Nicholine (Class of 2013) to welcome the new batch of Year 1 freshmen into the RV family. The 35th Student Council decided to leverage on this heartfelt song and came up with the music video production with the intention of bonding the RV family, for the alumni to reminisce the memories we had in RV, and for RVians, past and present, to be proud to be an RVian. 
+
+立化情 tells the RV story, an experience unique to RVians. From the perspective of one who was about to complete her journey in RV, reminiscence flows; the friendships forged, memories written and the times spent with fellow peers, things close to our hearts, are common for all yet unique to each individual.
+
+Through this, we hope to build a stronger sense of pride for the school, for all generations of RVians to treasure the friendships forged, our memories and the times that we have spent in RV, 似水流年用难忘，地久天长立化情.
+
+#### 立化情 ♦ 作词作曲：梁伶蔚
+
