--- a/_ours-stories/立化情.md
+++ b/_ours-stories/立化情.md
@@ -15,3 +15,7 @@ Through this, we hope to build a stronger sense of pride for the school, for all
 
 #### 立化情 ♦ 作词作曲：梁伶蔚
 
+|   |   |   |   |
+|:-:|---|---|---|
+| 回想一起度过的时光<br>梦想飞翔<br>成长在立化的土壤<br>创造了希望<br>求学之道并不容易<br>一起努力<br>因为有了你<br>创造美好回忆  | 在立化我不孤单<br>酸甜苦辣朋友陪伴<br>立化情是那么地灿烂<br>在未来记忆相伴<br>在立化我不孤单<br>酸甜苦辣朋友陪伴<br>立化情是那么地灿烂<br>就在未来记忆相伴  | 如今追逐<br>自的理想<br>不再迷茫<br>未来的路就在前方<br>不害怕 不紧张<br>感怀那些年的努力<br>庆幸有你<br>与我同悲喜<br>让我充满勇气  | 在立化我不孤单<br>酸甜苦辣朋友陪伴<br>立化情是那么地灿烂<br>在未来记忆相伴<br>从立化我们扬帆<br>草木青青海云缦缦<br>立化情是那么地温暖<br>这份友情千金不换  |
+|   |   |   |   |
