--- a/_ours-stories/立化情.md
+++ b/_ours-stories/立化情.md
@@ -3,7 +3,7 @@ title: 立化情
 permalink: /ours-stories/ourstories-2ndnavi/
 description: ""
 ---
-<img src="/images/aboutlihuaqing.png" style="width:30%" align=left>
+<img src="/images/aboutlihuaqing.png" style="width:30%" align=left><br>
 
 <iframe width="800" height="372" src="https://www.youtube.com/embed/NEUpPG6rIcc" title="立化情MV" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
